turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
		rule(state,i) match {
                    ^Turmite:32: error: type mismatch;
 found   : java.awt.Color
 required: Int
						 setCouleurSol(colors(rule(state)(getCouleurSol)(0)))
                                                                                  ^Turmite:34: error: type mismatch;
 found   : java.awt.Color
 required: Int
						 setCouleurSol(colors(rule(state)(getCouleurSol)(0)))
                                                                                  ^Turmite:37: error: type mismatch;
 found   : java.awt.Color
 required: Int
						 setCouleurSol(colors(rule(state)(getCouleurSol)(0)))
                                                                                  ^Turmite:41: error: type mismatch;
 found   : java.awt.Color
 required: Int
						 setCouleurSol(colors(rule(state)(getCouleurSol)(0)))
                                                                                  ^Turmite:46: error: type mismatch;
 found   : java.awt.Color
 required: Int
						 setCouleurSol(colors(rule(state)(getCouleurSol)(0)))
                                                                                  ^